sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:6: error: not found: value j
      copy(j-1,j)
           ^AlgInsertionSort:6: error: not found: value j
      copy(j-1,j)
               ^AlgInsertionSort:7: error: not found: value j
      j-=1
      ^AlgInsertionSort:9: error: not found: value j
    }while (plusPetit(v,getValeur(j-1)))
                                  ^AlgInsertionSort:10: error: not found: value j
    setValeur(j-1,v)
              ^